CF1-212 Document response objects in API
